# quickstart-openshift

./: .dockerignore  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .trivyignore  CODE_OF_CONDUCT.md  COMPLIANCE.yaml  CONDUCT.md  CONTRIBUTING.md  CSP_FIX_PLAN.md  Dockerfile  GitVersion.yaml  Greenfield-setup.md  HOWTO.md  LICENSE  PRISMA_V7_MIGRATION.md  README.md  SECURITY.md  SETUP.md  TEST_BCGOV_CSP_FIX.md  docker-compose.go.yml  docker-compose.java.yml  docker-compose.py.yml  docker-compose.yml  eslint-base.config.mjs  eslint.config.mjs  index.html  index.js  lcov.info  list.txt  mail.txt  new.yml  old.yml  package-lock.json  package.json  renovate.json  run.sh  test.sh  tsconfig.json
.githooks/: pre-commit
.github/: .trivyignore  CODEOWNERS  CONTRIBUTING.md  codeowners  copilot-instructions.md  dependabot.yml  pull_request_template.md  renovate.js  trivy.yaml
.pipeline/: build.yml  (+2 more)
backend-python/: .prospector.yaml  Dockerfile  README.md  generate-models.sh  logger.conf  openshift.deploy.yml  pyproject.toml  run-unit-tests.sh  start-local.sh  start-openshift.sh
backend-python/db/: Dockerfile
backend-python/db/migrations/: V1.0.0__init.sql
backend-python/src/: main.py
backend-python/src/core/: config.py
backend-python/src/db/: session.py
backend-python/src/v1/models/: __init__.py  entities.py  model.py  user_entity.py
backend-python/src/v1/repository/: __init__.py  repository.py
backend-python/src/v1/routes/: __init__.py  user_routes.py
backend-python/src/v1/structs/: __init__.py  user.py
backend-python/test/: test_main.py
(+1386 files in other folders)
