[tool.poetry]
name = "backend-python"
version = "0.1.0"
description = "Starter template for Python backend projects"
authors = ["NRIDS"]
readme = "README.md"
packages = [{ include = "backend_python" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
pydantic = {version ="^1.10.9", extras = ["email"]}
requests = "^2.31.0"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
prospector = "^1.10.2"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 80

[tool.prospector]
strictness = "veryhigh"
test-warnings = true
doc-warnings = true

[tool.pytest.ini_options]
pythonpath = [".", "src"]
